test/cli/test-generating-policy/matchconditions-skip/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: generated-config
  namespace: workload-namespace
data:
  foo: bar
