test/cli/test-generating-policy/matchconditions-skip/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workload-namespace
  labels:
    example.com/type: workload
---
apiVersion: v1
kind: Namespace
metadata:
  name: excluded-namespace
  labels:
    example.com/type: platform
