test/cli/test-generating-policy/matchconditions-skip/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generating-policy-match-condition-skip
policies:
- policy.yaml
resources:
- resources.yaml
results:
- generatedResource: configmap.yaml
  isGeneratingPolicy: true
  kind: Namespace
  policy: generate-configmap-for-workloads
  resources:
  - workload-namespace
  result: pass
- isGeneratingPolicy: true
  kind: Namespace
  policy: generate-configmap-for-workloads
  resources:
  - excluded-namespace
  result: skip
